objects/Team_Member_Role__c.object
<CustomObject>
    <fields>
        <fullName>Core_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Core Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Role ID</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Team Member Roles</relationshipLabel>
        <relationshipName>Team_Member_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Role_ID__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Member ID</label>
        <referenceTo>Core_Team_Member__c</referenceTo>
        <relationshipLabel>Team Member Roles</relationshipLabel>
        <relationshipName>Team_Member_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Team Member Role</label>
    <nameField>
        <displayFormat>TMR-{00000000}</displayFormat>
        <label>Team Member Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Member Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>